--- a/client/package.json
+++ b/client/package.json
@@ -32,8 +32,7 @@
     "clsx": "^2.0.0",
     "js-cookie": "^3.0.5",
     "@types/js-cookie": "^3.0.6",
-    "@google/generative-ai": "^0.21.0",
-    "sharp": "^0.33.0"
+    "@google/generative-ai": "^0.21.0"
   },
   "devDependencies": {
     "eslint": "^8.51.0",
