--- a/client/package.json
+++ b/client/package.json
@@ -9,30 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.2.2",
+    "@google/generative-ai": "^0.21.0",
+    "@headlessui/react": "^1.7.17",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
     "axios": "^1.5.0",
+    "clsx": "^2.0.0",
+    "critters": "^0.0.23",
+    "framer-motion": "^10.16.0",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.290.0",
+    "next": "^14.2.30",
+    "next-seo": "^6.4.0",
+    "postcss": "^8.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.290.0",
-    "framer-motion": "^10.16.0",
-    "next-seo": "^6.4.0",
-    "react-dropzone": "^14.2.3",
-    "recharts": "^2.8.0",
     "react-query": "^3.39.3",
-    "@headlessui/react": "^1.7.17",
-    "clsx": "^2.0.0",
-    "js-cookie": "^3.0.5",
-    "@types/js-cookie": "^3.0.6",
-    "@google/generative-ai": "^0.21.0"
+    "recharts": "^2.8.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "eslint": "^8.51.0",
