--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,9 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "eslint": "^8.51.0",
     "eslint-config-next": "14.0.0"
   }
