docs: 更新部署文档和配置文件
- 添加详细的Vercel部署文档
- 更新.gitignore配置
- 优化vercel.json部署配置
- 添加部署脚本和测试文件

所有文件已准备好用于Vercel部署！

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,16 @@
 {
   "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
+  "devCommand": "npm run dev",
+  "installCommand": "npm install",
+  "rootDirectory": "client",
   "functions": {
-    "client/src/app/api/**/*.ts": {
+    "src/app/api/**/*.ts": {
       "maxDuration": 30
     }
+  },
+  "env": {
+    "GEMINI_API_KEY": "@gemini-api-key"
   }
 }
