--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Dependencies
 node_modules/
+*/node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -7,6 +8,7 @@ pnpm-debug.log*
 
 # Production builds
 .next/
+*/.next/
 out/
 dist/
 build/
@@ -17,6 +19,7 @@ build/
 .env.development.local
 .env.test.local
 .env.production.local
+.env.local.example
 
 # IDE and editor files
 .vscode/
